# SparkTTS.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: DirectML.cmake  Llama.cmake  ONNXRuntime.cmake  OpenVINO.cmake
scripts/: locate_vcvars64.bat
src/: CMakeLists.txt  api.cpp  api.h  audio_detokenizer.cpp  audio_detokenizer.h  audio_tokenizer.cpp  audio_tokenizer.h  llm_streamer.cpp  llm_streamer.h  main.c  main.cpp  prompt.cpp  prompt.h  ring_buffer.hpp  sampler.cpp  sampler.h  synthesizer.cpp  synthesizer.h  token_buffer.cpp  token_buffer.h  tokenizer.cpp  tokenizer.h  transformer.cpp  transformer.h  utils.cpp  utils.h
src/mac/: audio_detokenizer.cpp  audio_detokenizer.h  audio_detokenizer.mm  audio_detokenizer_coreml.h  audio_detokenizer_coreml.m  audio_detokenizer_impl.h  audio_detokenizer_impl.mm  audio_tokenizer.cpp  audio_tokenizer.h  audio_tokenizer_impl.h  audio_tokenizer_impl.mm
src/profiler/: perfetto_categories.cpp  perfetto_categories.h  profiler.cpp  profiler.h
src/win/: audio_detokenizer.cpp  audio_detokenizer.h  audio_detokenizer_impl.cpp  audio_detokenizer_impl.h  audio_tokenizer.cpp  audio_tokenizer.h  audio_tokenizer_impl.cpp  audio_tokenizer_impl.h  dxgi_device_selector.cpp  dxgi_device_selector.h
